# rust_base_learning

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust基础.excalidraw
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.specstory/history/: 2025-04-04_01-23-完善文件内容讨论.md  2025-04-04_07-17-代码独占锁的作用与必要性.md  2025-04-05_15-43-分析错误原因与解决方案.md  2025-04-10_02-13-代理服务器连接错误分析.md  2025-04-28_09-59-优化有序数组中位数解法.md
atoms_exercise/: Cargo.toml
atoms_exercise/src/: lib.rs
evm_lab/: Cargo.toml
evm_lab/src/: block.rs  const_var.rs  curr_block.rs  evm.rs  fake_db.rs  lib.rs  log_entry.rs  log_utils.rs  transaction.rs  utils.rs
leetcode/: 146.lru-缓存.rs  2081.k-镜像数字的和.rs  4.median-of-two-sorted-arrays.rs  4.寻找两个正序数组的中位数.rs  42.接雨水.rs
leetcode/src/: main.rs
my_db/: Cargo.toml
my_db/src/: lib.rs
p2p/: Cargo.toml  log4rs.yaml
p2p/src/: lib.rs
smart_point/src/: box_practise.rs  lib.rs
src/: main.rs
src/array_learning/: array_method.rs  mod.rs  str_match.rs
src/closure_learning/: adaper.rs  closure_lab_examples.rs  closure_test.rs  closure_test_one.rs  iter.rs  iter_method.rs  mod.rs
src/enum_learning/: match_test.rs  mod.rs  option_enum.rs
src/generic_trait_learning/: first_test.rs  generics_test.rs  mod.rs  second_test.rs
src/hash_map/: mod.rs
src/io_learning/: Panel.js  args_command.rs  mod.rs
src/lifetime_learning/: lifetime_fn.rs  mod.rs
src/new_type_learning/: mod.rs  new_type.rs
src/ownership_learning/: mod.rs  ownership.rs
src/smart_points/: cell.rs  cow.rs  mod.rs  my_point.rs  pin.rs  rc.rs  ref_cell.rs  (+1 more)
tokio_learning/: Cargo.toml
(+34 files in other folders)
