[package]
name = "rust_base_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "evm_lab","p2p", "smart_point","tokio_learning"]

[dependencies]
tokio = {version ="1.29.1",features = ["full"]  }
# p2p = {path = "p2p"}
# tokio_learning = {path = "tokio_learning"}
log = "0.4.22"
log4rs = "1.3.0"
